// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format-schema - compile based - options decoders should match 1`] = `
"/* eslint-disable */

import Ajv from \\"ajv\\";
import addFormats from \\"ajv-formats\\";
import { validateJson, Decoder } from \\"./helpers\\";
import { User } from \\"./models\\";
import jsonSchema from \\"./schema.json\\";

const ajv = new Ajv({ strict: false });
ajv.compile(jsonSchema);
addFormats(ajv, { mode: \\"fast\\", formats: [\\"date\\", \\"time\\"] });

// Decoders
export const UserDecoder: Decoder<User> = {
  definitionName: \\"User\\",
  schemaRef: \\"#/definitions/User\\",

  decode(json: unknown): User {
    const schema = ajv.getSchema(UserDecoder.schemaRef);
    if (!schema) {
      throw new Error(\`Schema \${UserDecoder.definitionName} not found\`);
    }
    return validateJson(json, schema, UserDecoder.definitionName);
  },
};
"
`;

exports[`format-schema - compile based decoders should match 1`] = `
"/* eslint-disable */

import Ajv from \\"ajv\\";
import addFormats from \\"ajv-formats\\";
import { validateJson, Decoder } from \\"./helpers\\";
import { User } from \\"./models\\";
import jsonSchema from \\"./schema.json\\";

const ajv = new Ajv({ strict: false });
ajv.compile(jsonSchema);
addFormats(ajv, undefined);

// Decoders
export const UserDecoder: Decoder<User> = {
  definitionName: \\"User\\",
  schemaRef: \\"#/definitions/User\\",

  decode(json: unknown): User {
    const schema = ajv.getSchema(UserDecoder.schemaRef);
    if (!schema) {
      throw new Error(\`Schema \${UserDecoder.definitionName} not found\`);
    }
    return validateJson(json, schema, UserDecoder.definitionName);
  },
};
"
`;

exports[`format-schema - compile based models should match 1`] = `
"/* eslint-disable */
/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface User {
  createdAt: string;
  email: string;
}
"
`;

exports[`format-schema - compile based schema should match 1`] = `
"{
  \\"type\\": \\"object\\",
  \\"title\\": \\"Schema\\",
  \\"definitions\\": {
    \\"User\\": {
      \\"type\\": \\"object\\",
      \\"properties\\": {
        \\"createdAt\\": {
          \\"type\\": \\"string\\",
          \\"format\\": \\"date\\",
          \\"formatMinimum\\": \\"2016-02-06\\",
          \\"formatExclusiveMaximum\\": \\"2016-12-27\\"
        },
        \\"email\\": {
          \\"type\\": \\"string\\",
          \\"format\\": \\"email\\"
        }
      },
      \\"required\\": [
        \\"createdAt\\",
        \\"email\\"
      ]
    }
  },
  \\"properties\\": {
    \\"User\\": {
      \\"$ref\\": \\"#/definitions/User\\"
    }
  }
}"
`;
